--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-express": "^11.1.9",
     "@prisma/adapter-better-sqlite3": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "better-sqlite3": "^12.5.0",
     "multer": "^2.0.2",
     "node-forge": "^1.3.3",
     "prisma": "^7.1.0",
